Fixed scroll on iOS

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -90,8 +90,7 @@ html{
     width: 100%;
     overflow-x: hidden;
     touch-action: pan-x pan-y;
-    height: 100vh;
-    height: 100svh;
+    height: 100%;
     scroll-padding-top: 60px;
 }
 
@@ -100,7 +99,6 @@ body{
     color: var(--text-color-1);
     margin: 0;
     touch-action: manipulation;
-    user-scalable: no;
     -ms-touch-action: manipulation;
     height: 100%;
     overflow: hidden;
